<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientActivity">

    <TextView
        android:id="@+id/ClientipText"
        android:layout_width="97dp"
        android:layout_height="43dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="100dp"
        android:text="@string/client_ip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientText"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/clientText"
        android:layout_width="98dp"
        android:layout_height="44dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="168dp"
        android:text="@string/client_port"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ClientName"
        android:layout_width="95dp"
        android:layout_height="26dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="80dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ClientText"
        android:layout_width="141dp"
        android:layout_height="26dp"
        android:layout_marginTop="72dp"
        android:text="@string/client"
        app:layout_constraintEnd_toStartOf="@+id/ClientName"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/portNumber"
        android:layout_width="124dp"
        android:layout_height="45dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="24dp"
        android:autofillHints="port number"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/ClientIPnumber"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/ClientIPnumber"
        android:layout_width="124dp"
        android:layout_height="44dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="100dp"
        android:autofillHints="ip number"
        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/ClientMessageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/message_to_server"
        app:layout_constraintBottom_toTopOf="@+id/Clientmessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Clientmessage"
        android:layout_width="184dp"
        android:layout_height="117dp"
        android:layout_marginBottom="160dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/portNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clientButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:text="@string/start_client"
        app:layout_constraintBottom_toTopOf="@+id/portNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>