<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6D6D6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginTop="@dimen/default_gap"
        android:layout_marginEnd="@dimen/default_gap"
        android:layout_marginBottom="@dimen/default_gap"
        android:background="@drawable/holztisch"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_gap"
            android:layout_marginTop="@dimen/default_gap"
            android:text="@string/cheat_popup"
            android:textColor="#F1FBFC"
            android:textSize="@dimen/default_gap" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_gap"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_marginEnd="@dimen/default_gap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/btnbg"
                android:padding="@dimen/default_gap"
                android:text="@string/player1"
                android:textColor="@color/black"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_gap"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_marginEnd="@dimen/default_gap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/btnbg"
                android:padding="@dimen/default_gap"
                android:text="@string/player2"
                android:textColor="@color/black"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_gap"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_marginEnd="@dimen/default_gap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/btnbg"
                android:padding="@dimen/default_gap"
                android:text="@string/player3"
                android:textColor="@color/black"/>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>