<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dice_background"
    tools:context=".screens.ServerActivity">

    <TextView
        android:id="@+id/ServeripText"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/server_text_container"
        android:gravity="center"
        android:text="@string/server_ip"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ServerText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ServerText"
        android:layout_width="105dp"
        android:layout_height="35dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="152dp"
        android:background="@drawable/server_text_container"
        android:gravity="center"
        android:text="@string/server_port"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ServerName"
        android:layout_width="110dp"
        android:layout_height="37dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/server_text_container"
        android:gravity="center"
        android:text="@string/textview"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ServerNameText"
        android:layout_width="161dp"
        android:layout_height="37dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/server_text_container"
        android:gravity="center"
        android:text="@string/name_of_the_server"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ServerName"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ServerportNumber"
        android:layout_width="126dp"
        android:layout_height="35dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/server_text_container"
        android:gravity="center"
        android:text="@string/textview"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ServerIPnumber"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/ServerIPnumber"
        android:layout_width="124dp"
        android:layout_height="36dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="92dp"
        android:background="@drawable/server_text_container"
        android:gravity="center"
        android:text="@string/textview"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/ServerMessageText"
        android:layout_width="156dp"
        android:layout_height="28dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/server_text_container"
        android:gravity="center"
        android:text="@string/message_to_server"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Servermessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Servermessage"
        android:layout_width="261dp"
        android:layout_height="243dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/server_text_container"
        android:gravity="center"
        android:text="@string/textview"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ServerportNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/serverButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/start_server"
        app:layout_constraintBottom_toTopOf="@+id/ServerMessageText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>