<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6D6D6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"

        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:background="@drawable/holztisch"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="@dimen/_75sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/cheat_popup"
            android:textColor="#F1FBFC"
            android:textSize="@dimen/_16sdp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"

            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_20sdp">

            <Button
                android:id="@+id/player1btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerInParent="true"
                android:background="@drawable/btnbg"
                android:padding="@dimen/_5sdp"
                android:text="@string/player1"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"

            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp">


            <Button
                android:id="@+id/player2btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerInParent="true"
                android:background="@drawable/btnbg"
                android:padding="@dimen/_5sdp"
                android:text="@string/player2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"

            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp">

            <Button
                android:id="@+id/player3btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerInParent="true"
                android:background="@drawable/btnbg"
                android:padding="@dimen/_5sdp"
                android:text="@string/player3"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>